ai.txt
Первый запрос:

	Это файлы для создания сайта to-do list. Я хочу привязать к сайту telegram бота.Напиши мне скрипт для работы бота со следующим функционалом: добавление, удаление и редактирование задач. Можешь как профессионал в настройке ботов и в кодинге прислать мне код для бота и полный код всех измененных файлов

Второй запрос:
	когда я написал /link Adolf a010305@a , то он пишет:Пользователь не найден. Проверьте логин. Вот что выводил сервер пока я его запускал:
Failed to open file '"C:\Users\For\Downloads\First_lab\db.sql"', error: 22
mysql> SOURCE "C:/Users/For/Downloads/First_lab/db.sql";
ERROR:
Failed to open file '"C:\Users\For\Downloads\First_lab\db.sql"', error: 22
mysql> SOURCE C:\\Users\\For\\Downloads\\First_lab\\db.sql;
ERROR:
Unknown command '\\'.
ERROR:
Unknown command '\\'.
ERROR:
Unknown command '\\'.
ERROR:
Unknown command '\\'.
ERROR:
Unknown command '\\'.
ERROR 1007 (HY000): Can't create database 'todolist'; database exists
Database changed
Query OK, 0 rows affected (0.10 sec)

Query OK, 0 rows affected (0.07 sec)

ERROR 1396 (HY000): Operation CREATE USER failed for 'todo_user'@'localhost'
Query OK, 0 rows affected (0.01 sec)

Query OK, 0 rows affected (0.01 sec)

Query OK, 0 rows affected (0.06 sec)
Records: 0  Duplicates: 0  Warnings: 0

Query OK, 0 rows affected (0.05 sec)
Records: 0  Duplicates: 0  Warnings: 0

mysql> SOURCE C:/Users/For/Downloads/First_lab/db.sql;
ERROR 1007 (HY000): Can't create database 'todolist'; database exists
Database changed
ERROR 1050 (42S01): Table 'users' already exists
ERROR 1050 (42S01): Table 'items' already exists
ERROR 1396 (HY000): Operation CREATE USER failed for 'todo_user'@'localhost'
Query OK, 0 rows affected (0.01 sec)

Query OK, 0 rows affected (0.01 sec)

ERROR 1061 (42000): Duplicate key name 'idx_items_user_id'
ERROR 1061 (42000): Duplicate key name 'idx_users_telegram_id'
mysql>

Есть идеи как это пофиксить?

Третий запрос:

	Бот выдал: "❌ Неверный пароль. Попробуйте снова." 
	вот что выдаёт база в sql:
	"----+----------+---------------------------------------------------------+-------------+---------------------+
	| id | username | password_hash                                           | telegram_id | created_at          |
	+----+----------+---------------------------------------------------------+-------------+---------------------+
	|  1 | Adolf    | $2b$10$AbCdEfGhIjKlMnOpQrStUvWxYz1234567890abcdefghijkl | NULL        | 2025-06-22 22:39:48 |
	+----+----------+---------------------------------------------------------+-------------+---------------------+"

В чём ошибка, это ли ошибка в хеше?

Четвёртый запрос:

	Бот работает, только в одном запуске бота он выдал вот такую ошибку:
	"C:\Users\For\Downloads\First_lab\index.js:271
            return res.end(JSON.stringify({ hasTelegram: !!rows[0]?.telegram_id }));
                                                                   ^

SyntaxError: Unexpected token '.'
←[90m    at wrapSafe (internal/modules/cjs/loader.js:1072:16)←[39m
←[90m    at Module._compile (internal/modules/cjs/loader.js:1122:27)←[39m
←[90m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)←[39m
←[90m    at Module.load (internal/modules/cjs/loader.js:1002:32)←[39m
←[90m    at Function.Module._load (internal/modules/cjs/loader.js:901:14)←[39m
←[90m    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:74:12)←[39m
←[90m    at internal/main/run_main_module.js:18:47←[39m"

Есть идеи как это починить? И критичная ли это ошибка для моего бота?
